apps/04-core-apps/08-nessus/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nessus
  labels:
    name: nessus
