apps/04-core-apps/08-nessus/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nessus
  namespace: nessus
  labels:
    app.kubernetes.io/name: nessus
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nessus
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nessus
    spec:
      containers:
      - name: nessus
        image: tenable/nessus:10.8.3-ubuntu # {"$imagepolicy": "flux-system:nessus-policy"}
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8834
        livenessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 5
          failureThreshold: 5
          successThreshold: 1
        readinessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 5
          failureThreshold: 5
          successThreshold: 1
        resources:
          requests:
            cpu: "200m"
            memory: "400Mi"
          limits:
            cpu: "2000m"
            memory: "4000Mi"
